refactor(agent-tars): chat ui style

--- a/apps/agent-tars/src/renderer/src/components/ChatUI/index.scss
+++ b/apps/agent-tars/src/renderer/src/components/ChatUI/index.scss
@@ -2,17 +2,22 @@
   height: 100vh !important;
   background-color: var(--ai-color-bg-primary) !important;
   transition: width 0.3s ease !important;
-}
 
-.ai-app-input-section-container {
-  background-color: var(--ai-color-bg-tertiary) !important;
-  border-radius: var(--radius-lg) !important;
-}
+  .ai-app-input-section-container {
+    background-color: var(--ai-color-bg-tertiary) !important;
+    border-radius: var(--radius-lg) !important;
+  }
 
-.ai-app-chat-messages {
-  margin-top: 16px !important;
-}
+  .ai-app-chat-input-container {
+    padding-left: 10px;
+    padding-right : 10px;
+  }
 
-.ai-app-input-section-wrapper {
-  padding-top: 15px !important;
+  .ai-app-chat-messages {
+    margin-top: 16px !important;
+  }
+
+  .ai-app-input-section-wrapper {
+    padding-top: 15px !important;
+  }
 }
