refactor(agent-tars): some styles

--- a/apps/agent-tars/src/renderer/src/index.scss
+++ b/apps/agent-tars/src/renderer/src/index.scss
@@ -24,7 +24,7 @@
   --ai-color-bg-active: #ebedf0;
 
   /* Border Colors */
-  --ai-color-border: #f0f0f0;
+  --ai-color-border: #00000028;
   --ai-color-border-hover: #e0e0e0;
 
   /* Shadow */
