--- a/apps/agent-tars/src/renderer/src/index.scss
+++ b/apps/agent-tars/src/renderer/src/index.scss
@@ -193,3 +193,16 @@ body {
 .animate-spin-slow {
   animation: spin 3s linear infinite;
 }
+
+
+// This style modifies the default font rendering 
+// in the chat ui to make it darker and thinner.
+#root {
+  .markdown-body p {
+    margin: 0 0 0.3em;
+    line-height: 1.5;
+    color: var(--text-primary);
+    font-weight: 300;
+    font-size: 16px;
+  }
+}
