feat(agent-tars): refactor setting icon default display position (#266)

--- a/apps/agent-tars/src/renderer/src/components/LeftSidebar/index.module.scss
+++ b/apps/agent-tars/src/renderer/src/components/LeftSidebar/index.module.scss
@@ -387,10 +387,11 @@
 .bottomBar {
   padding: 12px;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   margin-bottom: 12px;
 
   &.collapsed {
     padding: 0px 0;
+    justify-content: center;
   }
 }
