--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -6,6 +6,10 @@
 FROM node:20-alpine AS builder
 WORKDIR /app
 
+# ヒープサイズ拡張
+ENV NODE_OPTIONS="--max_old_space_size=8192"
+
+
 # pnpm をグローバルインストール
 RUN npm install -g pnpm@9
 
